# meson-vcpkg

./: LICENSE  README.md  meson-vcpkg.txt  meson.build  vcpkg.json
